@@ -1,13 +1,15 @@
-#                                               -*- Autoconf -*-
+# -*- Autoconf -*-
 # Process this file with autoconf to produce a configure script.
 
 AC_PREREQ(2.59)
 AC_INIT([evldns],[0.1],[ray@nominet.org.uk])
-AM_INIT_AUTOMAKE()
 AC_CONFIG_MACRO_DIR([m4])
+AM_INIT_AUTOMAKE(foreign)
 
 AC_CONFIG_HEADERS([config.h])
 AC_CONFIG_FILES([Makefile])
+
+CHECK_COMPILER_FLAG([Wall], [CFLAGS="-Wall $CFLAGS"])
 
 # Checks for programs.
 AC_PROG_CC
@@ -49,23 +51,21 @@ CFLAGS="$OLDCFLAGS"
 LDFLAGS="$OLDLDFLAGS"
 LIBS="$tmp_LIBS"
 
-# Checks for functions
-AC_FUNC_MALLOC
-AC_CHECK_FUNCS([getaddrinfo])
-
 # Checks for header files.
-AC_CHECK_HEADERS([netdb.h stdlib.h string.h sys/socket.h unistd.h])
+AC_CHECK_HEADERS([stdlib.h string.h unistd.h])
+AC_CHECK_HEADERS([sys/socket.h netdb.h])
 AC_CHECK_HEADERS([ldns/ldns.h event.h])
 AC_HEADER_STDBOOL
 
 # Checks for typedefs, structures, and compiler characteristics.
 AC_C_CONST
 AC_TYPE_SIZE_T
-#AC_TYPE_UINT8_T
 
 # Checks for library functions.
+AC_FUNC_MALLOC
 AC_SEARCH_LIBS([dlopen], [dl])
 AC_CHECK_FUNCS([socket memset strdup])
+AC_CHECK_FUNCS([getaddrinfo getnameinfo])
 AC_SUBST(AM_CPPFLAGS)
 AC_SUBST(AM_CFLAGS)
 AC_SUBST(AM_LDFLAGS)
